# Cookpedia

./: .gitignore  Makefile  package-lock.json
backend/: manage.py  pyproject.toml
backend/src/apps/recipes/: admin.py  urls.py
backend/src/apps/recipes/migrations/: 0001_initial.py
backend/src/apps/recipes/models/: recipe.py
backend/src/apps/recipes/serializers/: category.py  recipe.py
backend/src/apps/recipes/views/: category.py  recipe.py
backend/src/apps/users/: urls.py
backend/src/config/: .env.template
backend/src/cookpedia/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  auth.ts  index.tsx
frontend/src/components/: Header.tsx  RequireAuth.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Home.tsx  LoginPage.tsx
frontend/src/styles/: colors.scss  custom.scss
